# Master-Thesis

./: .gitignore  Pipfile  README.md  config.py  main.py  pyproject.toml
animation/: network_m_object_simple.py  network_scene.py
animations/: network_m_object_simple.py  network_scene.py  network_scene_epn.py
epn/: custom_layers.py  datasets.py  epn.py  helper.py  main.py  network.py  network_rl.py  network_supervised.py
maze/: __init__.py  color_style.py  env.py  maze.py  motion.py  object.py  predefined_maze.py
network/: custom_layers.py  datasets.py  helper.py  network.py
rl/: experience.py  main.py  main_dataset.py  network_rl.py  trainer.py
rl2/: main.py  main_dataset.py  network_rl.py  trainer.py
src/: custom_layers.py  datasets.py  discriminator.py  epn.py  generator.py  main.py  test_functions.py
supervised/: main.py  network_supervised.py
tests/: test_epn.py  test_functions.py
