[tool.poetry]
name = "entropy-propagation"
version = "0.1.0"
description = ""
authors = ["Christian Coenen <coenen.christian@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
tensorflow = "~=2.3"
pydot = "~=1.4"
matplotlib = "~=3.3"
scikit-learn = "~=0.23"

[tool.poetry.dev-dependencies]
pytest = "~=6.0"
black = "~=20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''