[tool.poetry]
name = "master-thesis"
version = "1.0.0"
description = "This is the prototype implementation used to validate the concept that is defined in the thesis"
authors = ["Christian Coenen <coenen.christian@outlook.com>"]
readme="README.md"
repository="https://github.com/ChristianCoenen/Master-Thesis"

[tool.poetry.dependencies]
python = "^3.8.3"
tensorflow = "~=2.3"
pydot = "~=1.4"
matplotlib = "~=3.3"
scikit-learn = "~=0.23"
pre-commit = "~=2.9.2"
gym = "~=0.17"
pycairo = "~=1.19"

[tool.poetry.dev-dependencies]
pytest = "~=6.1"
black = "~=20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''